wallpaper: prevent a crash

When the containment is not ready and an apply wallpaper request is
triggered.

BUG: 483916